tests/baselines/reference/declarationEmitInvalidExport.errors.txt
tests/cases/compiler/declarationEmitInvalidExport.ts(2,3): error TS7027: Unreachable code detected.
tests/cases/compiler/declarationEmitInvalidExport.ts(4,30): error TS4081: Exported type alias 'MyClass' has or is using private name 'myClass'.
tests/cases/compiler/declarationEmitInvalidExport.ts(5,1): error TS1128: Declaration or statement expected.


==== tests/cases/compiler/declarationEmitInvalidExport.ts (3 errors) ====
    if (false) {
      export var myClass = 0;
      ~~~~~~
!!! error TS7027: Unreachable code detected.
    }
    export type MyClass = typeof myClass;
                                 ~~~~~~~
!!! error TS4081: Exported type alias 'MyClass' has or is using private name 'myClass'.
    }
    ~
!!! error TS1128: Declaration or statement expected.
    